--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".SignIn" />
-        <activity android:name=".SignUp"></activity>
+        <activity
+            android:name=".SignUp"
+            android:parentActivityName=".SignIn" />
+        <activity android:name=".VerifyEmail" />
+        <activity android:name=".ForgetPassword" />
+        <activity android:name=".ResetPassword" />
+        <activity android:name=".ResetPasswordDone"></activity>
     </application>
 
 </manifest>
