--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,14 @@
             </intent-filter>
         </activity>
         <activity android:name=".SignIn" />
-        <activity
-            android:name=".SignUp"
+        <activity android:name=".SignUp"
             android:parentActivityName=".SignIn" />
-        <activity android:name=".VerifyEmail" />
-        <activity android:name=".ForgetPassword" />
-        <activity android:name=".ResetPassword" />
+        <activity android:name=".VerifyEmail"
+            android:parentActivityName=".SignUp" />
+        <activity android:name=".ForgetPassword"
+            android:parentActivityName=".SignIn" />
+        <activity android:name=".ResetPassword"
+            android:parentActivityName=".ForgetPassword" />
         <activity android:name=".ResetPasswordDone"></activity>
     </application>
 
