--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,11 +34,13 @@
             android:name=".ResetPassword"
             android:parentActivityName=".ForgetPassword"
             android:windowSoftInputMode="stateVisible" />
-        <activity
-            android:name=".ResetPasswordDone" />
+        <activity android:name=".ResetPasswordDone" />
         <activity
             android:name=".Home"
-            android:theme="@style/HomeActivityTheme"></activity>
+            android:theme="@style/HomeActivityTheme" />
+        <activity
+            android:name=".UserProfile"
+            android:parentActivityName=".Home"></activity>
     </application>
 
 </manifest>
