--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
         <activity
             android:name=".UserProfile"
             android:parentActivityName=".Home" />
+        <activity
+            android:name=".MyProfile"
+            android:exported="true"
+            android:parentActivityName=".Home" />
 
         <service
             android:name=".MyService"
